[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/main/MainMenuTab.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]

[node name="MainMenuTab" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 960.0
margin_bottom = 383.0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 300

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 200.0
margin_top = 407.0
margin_right = 760.0
margin_bottom = 457.0
size_flags_horizontal = 4
custom_constants/separation = 16
alignment = 1

[node name="NewButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
text = "NEW"

[node name="LoadButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 144.0
margin_right = 272.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
text = "LOAD"

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 288.0
margin_right = 416.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 432.0
margin_right = 560.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 3
text = "QUIT"
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/NewButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/LoadButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_button_mouse_entered"]
